controller/loaders/swagger.js new route added to apis.  controller/routes/index.js cart added to index to be initialized in loaders. controller/routes/cart.js routes added to get cart and add new product to cart swagger documentation added.
